# diamond_add_taxonomy

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
diamond_add_taxonomy/: __init__.py  cli.py
ncbi_taxid/: cli.py  taxid_utils.py
tests/: test_diamond_add_taxonomy.py  test_ncbi_taxid.py  test_taxid_utils.py
